Adjust z-index for hero content and h1 for improved layering and to fix the display bug in the mobile menu btn

--- a/style.css
+++ b/style.css
@@ -196,7 +196,6 @@ nav {
 /* Hero Content */
 .hero-content {
   position: relative;
-  z-index: 10;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -266,6 +265,7 @@ h1 {
   color: white;
   font-size: 1.5rem;
   cursor: pointer;
+  z-index: 11;
 }
 
 @media (max-width: 768px) {
